--- a/modlist.toml
+++ b/modlist.toml
@@ -1,3 +1,2 @@
 [mods]
-testMod = { version = "1.0.0", url = "testwebsite.com" }
-testMod2 = { version = "1.0.0", url = "testwebsite.com" }
+MoreCompany = { version = "1.11.0", url = "https://thunderstore.io/package/download/notnotnotswipez/MoreCompany/1.11.0/" }
