--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0.215", features = ["derive"] }
 tempfile = "3.14.0"
 tokio = "1.41.1"
 toml = { version = "0.8.19", features = ["parse"] }
+zip-extract = "0.2.1"
