feat: full unzipping functionality with extra file checks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 colored = "2.1.0"
 dirs = "5.0.1"
+glob = "0.3.1"
 reqwest = { version = "0.12.9", features = [ "blocking", "stream" ] }
 serde = { version = "1.0.215", features = ["derive"] }
 tempfile = "3.14.0"
