chore: added more mods to mod list

--- a/modlist.toml
+++ b/modlist.toml
@@ -1,2 +1,5 @@
 [mods]
 MoreCompany = { version = "1.11.0", url = "https://thunderstore.io/package/download/notnotnotswipez/MoreCompany/1.11.0/" }
+TooManyEmotes = { version = "2.2.11", url = "https://thunderstore.io/package/download/FlipMods/TooManyEmotes/2.2.11/" }
+PersistentPurchases = { version = "1.2.0", url = "https://thunderstore.io/package/download/TheBeeTeam/PersistentPurchases/1.2.0/" }
+BetterItemScan = { version = "3.0.2", url = "https://thunderstore.io/package/download/PopleZoo/BetterItemScan/3.0.2/" }
