--- a/modlist.toml
+++ b/modlist.toml
@@ -3,3 +3,5 @@ MoreCompany = { version = "1.11.0", url = "https://thunderstore.io/package/downl
 TooManyEmotes = { version = "2.2.11", url = "https://thunderstore.io/package/download/FlipMods/TooManyEmotes/2.2.11/" }
 PersistentPurchases = { version = "1.2.0", url = "https://thunderstore.io/package/download/TheBeeTeam/PersistentPurchases/1.2.0/" }
 BetterItemScan = { version = "3.0.2", url = "https://thunderstore.io/package/download/PopleZoo/BetterItemScan/3.0.2/" }
+OpenBodyCams = { version = "3.0.3", url = "https://thunderstore.io/package/download/Zaggy1024/OpenBodyCams/3.0.3/" }
+ShipWindows = { version = "1.11.0", url = "https://thunderstore.io/package/download/TestAccount666/ShipWindows/1.11.0/" }
