--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 colored = "2.1.0"
+dircpy = "0.3.19"
 dirs = "5.0.1"
 glob = "0.3.1"
 reqwest = { version = "0.12.9", features = [ "blocking", "stream" ] }
